<resources>
    <string name="settings_app_name">Settings</string>
    <string name="settings_page_name">App settings</string>

    <string name="logout_dialog_title">Logout?</string>
    <string name="logout_dialog_subtitle">Do you really want to logout?</string>

    <string name="color_scheme">Color scheme</string>
    <string name="night_mode_system">System</string>
    <string name="night_mode_always">Night</string>
    <string name="night_mode_never">Light</string>

    <string name="locale_scheme">Locale</string>
    <string name="locale_ru">Russian</string>
    <string name="locale_en">English</string>

    <string name="contact_email" translatable="false">rco_project@mail.ru</string>
    <string name="contact_me">For any question</string>
    <string name="about_app">About app</string>
    <string name="email_client_required">Error! Email client required.</string>
</resources>