<?xml version="1.0" encoding="utf-8"?><!-- root -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOnBackground">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/navigationBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPageName"
                style="@style/AlmagestText.TypeDefault.Large.RobotoBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_page_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llColorScheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:background="@drawable/bg_rounded"
                android:backgroundTint="@color/statusBarColor"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvColorScheme"
                    style="@style/AlmagestText.TypeDefault.ExtraLarge.RobotoMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_scheme" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvNightModeSystem"
                        style="@style/AlmagestText.TypeDefault.Normal.RobotoMedium"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_rectangle_left_border"
                        android:backgroundTint="@color/colorPrimary"
                        android:gravity="center"
                        android:paddingVertical="@dimen/padding_small"
                        android:text="@string/night_mode_system"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toStartOf="@id/tvNightModeDark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvNightModeDark"
                        style="@style/AlmagestText.TypeDefault.Normal.RobotoMedium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_rectangle_center_border"
                        android:gravity="center"
                        android:paddingVertical="@dimen/padding_small"
                        android:text="@string/night_mode_always"
                        app:layout_constraintEnd_toStartOf="@id/tvNightModeLight"
                        app:layout_constraintStart_toEndOf="@id/tvNightModeSystem"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvNightModeLight"
                        style="@style/AlmagestText.TypeDefault.Normal.RobotoMedium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_rectangle_right_border"
                        android:gravity="center"
                        android:paddingVertical="@dimen/padding_small"
                        android:text="@string/night_mode_never"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvNightModeDark"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLocales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:background="@drawable/bg_rounded"
                android:backgroundTint="@color/statusBarColor"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLocales"
                    style="@style/AlmagestText.TypeDefault.ExtraLarge.RobotoMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/locale_scheme" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clLocales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvLocaleEn"
                        style="@style/AlmagestText.TypeDefault.Normal.RobotoMedium"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_rectangle_left_border"
                        android:backgroundTint="@color/colorPrimary"
                        android:gravity="center"
                        android:paddingVertical="@dimen/padding_small"
                        android:text="@string/locale_en"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toStartOf="@id/tvLocaleRu"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvLocaleRu"
                        style="@style/AlmagestText.TypeDefault.Normal.RobotoMedium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_rectangle_right_border"
                        android:gravity="center"
                        android:paddingVertical="@dimen/padding_small"
                        android:text="@string/locale_ru"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvLocaleEn"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:background="@drawable/bg_rounded"
                android:backgroundTint="@color/statusBarColor"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/AlmagestText.TypeDefault.ExtraLarge.RobotoMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_me" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvContactEmail"
                    style="@style/AlmagestText.TypeDefault.Title.RobotoMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:background="@drawable/bg_rounded"
                    android:backgroundTint="@color/colorOnBackground"
                    android:gravity="center"
                    android:padding="@dimen/padding_small"
                    android:text="@string/contact_email" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                style="@style/AlmagestTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:text="@string/logout" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
